[package]
name = "default_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.10"


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "iptypes", "winerror"] }